--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,17 @@
 {erl_first_files, ["src/getopt.erl"]}.
-{erl_opts, [debug_info, fail_on_warning]}.
+{erl_opts, [warn_unused_vars,
+            warn_export_all,
+            warn_shadow_vars,
+            warn_unused_import,
+            warn_unused_function,
+            warn_bif_clash,
+            warn_unused_record,
+            warn_deprecated_function,
+            warn_obsolete_guard,
+            strict_validation,
+            warn_export_vars,
+            warn_exported_vars,
+            warn_missing_spec,
+            warn_untyped_record, debug_info]}.
+{dialyzer_opts, [{warnings, [unmatched_returns, error_handling, race_conditions, behaviours]}]}.
+{xref_checks, [undefined_function_calls]}.
