Support OTP-21's unicode-only constraints
Functions start being available in OTP-20, so to get rid of warnings, a
conditional compilation flag is set there.

The cspan function has no direct equivalent, but can be worked around.
Likely heavier work would be required around its usage where strings are
not handled as lists, but only through 'string' functions. However this
will still cover most cases and get rid of compile-time warnings for
now.

--- a/rebar.config
+++ b/rebar.config
@@ -11,5 +11,7 @@
             warn_export_vars,
             warn_exported_vars,
             warn_missing_spec,
-            warn_untyped_record, debug_info]}.
+            warn_untyped_record, debug_info,
+            {platform_define, "^2", unicode_str}
+]}.
 {xref_checks, [undefined_function_calls]}.
