Switch to rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -14,4 +14,17 @@
             warn_untyped_record, debug_info,
             {platform_define, "^2", unicode_str}
 ]}.
+
+{dialyzer,
+ [
+  {warnings, [no_return, no_undefined_callbacks, no_unused]},
+  {get_warnings, true},
+  {plt_apps, top_level_deps},
+  {plt_location, local},
+  {base_plt_apps, [kernel, stdlib, sasl, inets, crypto, public_key, ssl,
+                   runtime_tools, erts, compiler, tools, syntax_tools, hipe,
+                   mnesia]},
+  {base_plt_location, global}
+ ]}.
+
 {xref_checks, [undefined_function_calls]}.
